admin improvements, media forms

--- a/website/apps/alibrary/static/alibrary/nj/playlist/listing_inline.html
+++ b/website/apps/alibrary/static/alibrary/nj/playlist/listing_inline.html
@@ -50,7 +50,7 @@
 
 			
 			
-			<div class="sidebar list item source" data-resource_uri="{{ item.resource_uri }}">
+			<div class="sidebar list item source ct-{{ item.item.content_type }}" data-resource_uri="{{ item.resource_uri }}">
 				<div class="right">
 					<a href="#" title="Remove" data-action="delete" class="action delete"><img src="/static/img/base/spacer.png" width="16" height="16" alt="Remove"></a>
 				</div>
