--- a/website/apps/importer/static/importer/nj/importfile.html
+++ b/website/apps/importer/static/importer/nj/importfile.html
@@ -39,6 +39,8 @@
 		
 		{{ object.filename }} <small>[{{ object.mimetype }}] {{ object.id }}</small>
 		{% if object.status == 'duplicate' %}<span class="warning pull-right">Duplicate</span>{% endif %}
+
+        {% if object.error %}<span class="warning pull-right">Error: {{ object.error }}</span>{% endif %}
 		
 	</h3>
 	
@@ -66,6 +68,10 @@
 		
 	</div>
 	{% endif %}
+
+
+
+
 	
 	
 	{% if object.status == 'duplicate' %}
