implemented permission checks (media play out), x-accel-implementation, adding multiple tracks to playlist...

--- a/website/apps/aplayer/static/aplayer/nj/detail_player.html
+++ b/website/apps/aplayer/static/aplayer/nj/detail_player.html
@@ -13,14 +13,14 @@
     </div>
 
 
-    <div class="row-fluid base">
+    <div class="row-fluid base player_actions" style="">
 
         <div class="span6 actions">
 
             <ul class="unstyled">
                 <li>
                     <a href="#" data-action="stop" class="visible-while-playing">
-                        <i class=" icon-stop icon-large"></i>
+                        <i class=" icon-stop icon-large" style="color: #0b0"></i>
                     </a>
                     <a href="#" data-action="play" class="hidden-while-playing">
                         <i class=" icon-play icon-large"></i>
