implemented 'real' export functionality:  - multiple items  - js rework  - playlist support  - file name stripping  - asset injection  - file based templates (for read me.txt etc)

--- a/website/apps/aplayer/static/aplayer/nj/detail_player.html
+++ b/website/apps/aplayer/static/aplayer/nj/detail_player.html
@@ -19,15 +19,19 @@
 
             <ul class="unstyled">
                 <li>
+                    <!--
                     <a href="#" data-action="stop" class="visible-while-playing">
                         <i class=" icon-stop icon-large" style="color: #0b0"></i>
                     </a>
-                    <a href="#" data-action="play" class="hidden-while-playing">
+                    -->
+                    <a href="/en/api/v1/release/18/#1#replace" data-action="play__" class="hidden-while-playing__ playable popup">
                         <i class=" icon-play icon-large"></i>
                     </a>
+                    <!--
                     <a href="#" data-action="pause" class="">
                         <i class=" icon-pause icon-large"></i>
                     </a>
+                    -->
                 </li>
             </ul>
             <!--
@@ -43,9 +47,11 @@
                     <a href="#" data-action="collect" class=" pull-right">
                         <i class="icon-plus icon-large"></i>
                     </a>
+                    <!--
                     <a href="#" data-action="delete" class=" pull-right">
                         <i class="icon-trash icon-large"></i>
                     </a>
+                    -->
                 </li>
             </ul>
 
