--- a/website/apps/aplayer/static/aplayer/nj/inline_player_item.html
+++ b/website/apps/aplayer/static/aplayer/nj/inline_player_item.html
@@ -1,25 +1,24 @@
-<div class="item playlist object {{ object.uuid }} hoverable" id="{{ object.uuid }}" id="playlist_item_{{ object.id }}"
+<div class="item playlist media object {{ object.uuid }} hoverable" id="{{ object.uuid }}"
+     id="playlist_item_{{ object.id }}"
      data-item_id="{{ object.id }}">
 
     <div class="wrapper">
 
         <div class="row-fluid">
             <div class="span10 information">
-                <span class="title">{{ object.name }}</span>
+                <span class="title">
+                    <a class="" href="{{ object.absolute_url }}">{{ object.name }}</a>
+                </span>
                 <span><a class="" href="{{ object.artist.absolute_url }}">{{ object.artist.name }}</a> |
                 <a class="" href="{{ object.release.absolute_url }}">{{ object.release.name }}</a></span>
             </div>
             <div class="span2 duration">
                 <span>
                 {{ object.formated_duration }}
+                <a class="" data-action="collect" href="#"><i class="icon-plus icon-large"></i></a>
                 </span>
-                <!--
-                <ul class="unstyled actions">
-                    <li>
-                        <a class="collectable" href="#"><i class="icon-plus icon-large"></i></a>
-                    </li>
-                </ul>
-                -->
+
+
             </div>
         </div>
 
