--- a/website/apps/aplayer/static/aplayer/nj/inline_player_item.html
+++ b/website/apps/aplayer/static/aplayer/nj/inline_player_item.html
@@ -1,6 +1,8 @@
 <div class="item playlist media object {{ object.uuid }} hoverable" id="{{ object.uuid }}"
      id="playlist_item_{{ object.id }}"
-     data-item_id="{{ object.id }}">
+     data-item_id="{{ object.id }}"
+     data-id="{{ object.id }}"
+     data-uuid="{{ object.uuid }}">
 
     <div class="wrapper">
 
