- reworked all forms & form handling - metadata lookup refactoring - added music brains as service provider - relation lookup reloaded!! - tons of fixes & improvements all over :)

--- a/website/apps/abcast/static/abcast/nj/selected_object.html
+++ b/website/apps/abcast/static/abcast/nj/selected_object.html
@@ -1,24 +1,28 @@
-
 <h4>Selected for scheduling</h4>
 <p>Drag and drop to a free slot</p>
 
 <div class="object-search">
-	<input class="autocomplete" data-ct="playlist" type="text" placeholder="Search broadcasts">
-	<div class="ac-result"></div>
+    <input class="autocomplete" data-ct="playlist" type="text" placeholder="Search broadcasts">
+
+    <div class="ac-result"></div>
 </div>
 
 {% if object.id %}
-<div class="_container object-to-schedule" id="{{ object.uuid }}">
-	<h4>{{ object.name }} <small class="pull-right">{{ object.target_duration / 60 }} min</small></h4>
-	<p class="tags">{{ object.d_tags|shorten(60) }}</p>
-	
-	
-	<!--
-	<ul class="unstyled item-list">
-	{% for item in object.items %}
-	<li>{{ item.item.content_object.name|truncate_chars_inner(30) }}</li>
-	{% endfor %}
-	</ul>
-	-->
-</div>
+    <div class="_container object-to-schedule" id="{{ object.uuid }}">
+        <span class="name">{{ object.name }} <small class="pull-right">{{ object.target_duration / 60 }} min
+        </small></span>
+
+        <p class="tags">{{ object.d_tags|shorten(60) }}</p>
+
+        <p>{{ object.description }}</p>
+
+
+        {% for message in object.broadcast_status_messages %}
+        {{ message }}
+        {% endfor %}
+
+
+        <h1>{{ object.duration / 60 /1000 }}</h1>
+
+    </div>
 {% endif %}
