#71 Track merge This commit refs #70 and fixes #71 @3.5h

--- a/website/apps/alibrary/static/alibrary/nj/merge/merge_dialog.html
+++ b/website/apps/alibrary/static/alibrary/nj/merge/merge_dialog.html
@@ -1,10 +1,8 @@
-
-
-
 <div class="info">
 
-<strong>Kjhaksdhaksdh</strong>
-<p>asldkjhakjshdksjhdkjh</p>
+    <strong>Kjhaksdhaksdh</strong>
+
+    <p>asldkjhakjshdksjhdkjh</p>
 
 </div>
 
@@ -34,14 +32,16 @@
                 </div>
 
                 <div class="span10">
-                    <strong>{{ object.name }}<small class="pull-right"> {{ object.media.length }} Tracks</small></strong>
+                    <strong>{{ object.name }}
+                    <small class="pull-right"> {{ object.media.length }} Tracks
+                    </small>
+                    </strong>
                     <ul class="unstyled">
 
                         <li>
 
                             <span class="value">
                                 <strong>{{ object.releasedate }} | {{ object.release_country }}</strong>
-
                             </span>
                         </li>
 
@@ -67,7 +67,6 @@
                         </li>
 
 
-
                     </ul>
                 </div>
 
@@ -85,7 +84,6 @@
 <div class="action">
 
     <form class="form-horizontal">
-
 
 
         <a class="pull-right confirm btn btn-primary" data-action="confirm" type="button">Confirm</a>
