--- a/website/apps/alibrary/static/alibrary/nj/artist/autocomplete.html
+++ b/website/apps/alibrary/static/alibrary/nj/artist/autocomplete.html
@@ -23,6 +23,15 @@
                         <a href="{{ item.get_absolute_url }}" class="link-main"><h2>
                             {{ item.name|highlight(meta.query) }}</h2></a>
 
+                        {% if item.namevariations %}
+                            <div class="related">
+                                <ul class="unstyled horizontal">
+                                    {% for name in item.namevariations %}
+                                    <li>{{ name|highlight(meta.query) }}, </li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        {% endif %}
                     </div>
 
                 </div>
