--- a/website/apps/abcast/static/abcast/nj/emission_popup.html
+++ b/website/apps/abcast/static/abcast/nj/emission_popup.html
@@ -1,26 +1,40 @@
 <section class="title">
 	<h3>{{ object.name }} <small class="pull-right">{{ object.type_display }}</small></h3>
 	<ul class="unstyled">
-		{% if object.user %}
-		<li>
-			<i class="icon-user"></i> {{ object.user.username }}
-		</li>
-		{% endif %}
 		<li>
 			<i class="icon-time"></i> {{ object.time_start|format_datetime('time') }} - {{ object.time_end|format_datetime('time') }} | {{ object.time_start|format_datetime('date') }}
 		</li>
+		{% if object.user %}
+		<li>
+			<i class="icon-user"></i>
+            <a href="{{ object.user.absolute_url }}">{{ object.user.username }}</a>
+            <small>scheduler</small>
+		</li>
+		{% endif %}
+		{% if object.user_co %}
+		<li>
+			<i class="icon-user"></i>
+            <a href="{{ object.user_co.absolute_url }}">{{ object.user_co.username }}</a>
+            <small>creator</small>
+		</li>
+		{% endif %}
 	</ul>
 </section>
 
 <section class="description">
 
-	{{ object.content_object.description }}
 
+    <!--
+	<p>{{ object.content_object.description_html|shorten(200)|linebreaksbr}}</p>
+    -->
+    {% if object.content_object.description %}
+	<div class="description markdown-remove">{{ object.content_object.description_html}}</div>
+    {% endif %}
 	<!--
 	<a href="{{ object.content_object.absolute_url }}" class="pull-left">> Read more</a>
 	-->
 
-	<ul class="unstyled">
+	<ul class="unstyled object-links">
 		<li>
 			<a href="{{ object.absolute_url }}">&gt; Emission details</a>
 		</li>
@@ -38,9 +52,6 @@
 			<input type="checkbox" class="edit-lock" {% if object.locked == 1 %}checked="checked"{% endif %}>
 			Lock editing </label>
 	</fieldset>
-	
-	
-
 	
 	<fieldset class="color">
 		<div class="controls">
@@ -71,9 +82,7 @@
 
 	<div class="btn-toolbar">
 		<div class="btn-group pull-right">
-
 			<a data-action="cancel" class="btn btn-mini pull-right">Cancel</a>
-
 			{% if not object.locked %}
 			<a data-action="delete" class="btn btn-mini pull-right">Delete</a>
 			{% endif %}
