--- a/website/apps/abcast/static/abcast/nj/selected_object.html
+++ b/website/apps/abcast/static/abcast/nj/selected_object.html
@@ -19,7 +19,7 @@
 					{% if object.main_image %}
 					<img src="{{ object.main_image }}" />
 					{% else %}
-					<img src="/static/img/base/defaults/listview.{{ object.ct }}.xl.png" width="90" height="90" />
+					<img src="/static/img/base/defaults/listview.playlist.xl.png" width="90" height="90" />
 					{% endif %}
 
 				</div>
