pypo api calculations

--- a/website/apps/abcast/static/abcast/nj/emission.html
+++ b/website/apps/abcast/static/abcast/nj/emission.html
@@ -2,10 +2,14 @@
 	class="chip fix {{ object.source }} emission theme-{{ object.color }}" 
 	data-resource-uri={{ object.resource_uri }}
 	id="{{ object.uuid }}" 
-	data-tip="<div class='tooltip-emission'><strong><i class='icon-tasks'></i> {{ object.type }}</strong><br>{{ object.start }} - {{ object.end }}<br>scheduled by: {{ object.user.username }}<div class='description markdown-remove'>{{ object.content_object.description_html}}</div></div>"
+	data-tip="<div class='tooltip-emission'><strong><i class='icon-tasks'></i> {{ object.type }}</strong><br>{{ object.start }} - {{ object.end }}<br>scheduled by: {{ object.user.username }}<div class='description markdown-remove'>{{ object.content_object.description_html}}</div>{% if object.content_object.main_image %}<img src='{{ object.content_object.main_image }}' style='width: 50%;'>{% endif %}</div>"
 	style="top:{{ top }}px;left:-1px;width:100%;
 ">
-	
+
+
+
+
+
 	<dl class="cbrd" style="height:{{ height - 1 }}px;">
 		<dt style="">
 			
